--- a/public/views/maps/index.html
+++ b/public/views/maps/index.html
@@ -126,12 +126,8 @@
                                                     <li><a href="#map" role="button" 
                                                            data-toggle="modal" data-target="#startSimulationModal">Start simulation</a></li>
 
-                                                    <li><a href="#map" role="button" 
+                                                    <li><a href="#map/editMap" role="button" 
                                                            data-toggle="modal" data-target="#editMap">Edit map</a>
-                                                    </li>
-                                                    
-                                                    <li><a href="#map" role="button" 
-                                                           data-toggle="modal" data-target="#editSceneModal">Edit scene</a>
                                                     </li>
 
                                                     <li><a href="#map" role="button" 
@@ -209,99 +205,6 @@
               <div class="modal-footer">  
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                 <button type="button" class="btn btn-success" data-dismiss="modal">Start</button>  
-              </div>
-            </div>
-
-          </div>
-        </div>
-
-        <!-- edit map Modal -->
-        <div class="modal fade" role="dialog" id="editMap">
-          <div class="modal-dialog">
-
-            <!-- Modal content-->
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Configurations</h4>
-              </div>
-                
-              <div class="modal-body">
-                <div class="panel-body">
-                    <div class="panel panel-primary">
-                        <div class="panel-heading">
-                            <h3 class="panel-title"><i class="fa fa-search"></i> Basic data</h3>                        
-                        </div>
-
-                        <div class="panel-body">                      
-                              <div class="row">
-                                    <div class="col-sm-6">
-                                      <label>Name</label>
-                                      <input class="form-control" value="Actur simulation" />
-                                    </div>
-
-                                    <div class="col-sm-6">
-                                      <label>Creator</label>
-                                      <input class="form-control" value="user name 1" disabled/>
-                                    </div>
-                                      
-                                    <div class="col-sm-6">
-                                        </br>
-                                        <label>Creation date</label>
-                                        <input class="form-control" type="text" value="01/10/2015" disabled/>
-                                    </div>
-                                  
-                                    <div class="col-sm-6">
-                                        </br>
-                                        <label>Type</label>
-                                        <select class="form-control">
-                                            <option value="all">All</option>
-                                            <option value="private">Private</option>
-                                            <option value="public">Public</option>
-                                        </select>
-                                    </div>
-
-                                    <div class="col-sm-6">
-                                        </br>
-                                        <label>State</label>
-                                        <select  class="form-control">
-                                            <option value="All">All</option>
-                                            <option value="draft">Draft</option>
-                                            <option value="active">Active</option>
-                                        </select>
-                                    </div>
-                                </div> 
-                        </div>
-                    </div>
-                </div>                                   
-              </div>
-                
-              <div class="modal-footer">  
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" data-dismiss="modal">Save</button>  
-              </div>
-            </div>
-
-          </div>
-        </div>
-
-        <!-- edit scene Modal -->
-        <div class="modal fade" role="dialog" id="editSceneModal">
-          <div class="modal-dialog">
-
-            <!-- Modal content-->
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Scene management</h4>
-              </div>
-                
-              <div class="modal-body">
-                   Lista de escenas
-              </div>
-                
-              <div class="modal-footer">  
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
               </div>
             </div>
 
