--- a/public/views/maps/editScene.html
+++ b/public/views/maps/editScene.html
@@ -22,52 +22,10 @@
         </nav>            
 
         <div id="page-wrapper">		
-            <ul class="nav nav-tabs">
-                <li><a data-toggle="tab" href="#map">Map search</a></li>
-                <li class="active"><a data-toggle="tab" href="#newMap">New map</a></li>
-            </ul>
-
             <div class="panel-body">  
                 <div class="panel panel-primary">
                     <div class="panel-heading">
-                        <h3 class="panel-title"><i class="fa fa-plus-circle"></i> Basic data </h3>
-                    </div>
-
-                    <div class="panel-body">
-                        <div class="row">
-                            <div class="col-xs-4">
-                                <label>Name</label>
-                                <input class="form-control" ng-model="map.name" />
-                            </div>
-                                    
-                            <div class="col-xs-4">
-                                <label>Type</label>
-                                <select ng-model="map.type" class="form-control">
-                                    <option value="private">Private</option>
-                                    <option value="public">Public</option>
-                                </select>
-                            </div>
-    
-                            <div class="col-xs-4">
-                                <label>State</label>
-                                <select ng-model="map.state" class="form-control">
-                                    <option value="draft">Draft</option>
-                                    <option value="active">Active</option>
-                                </select>
-                            </div>
-                            
-                            <div class="col-xs-12">
-                                </br>
-                                <input type="submit" class="btn btn-primary" value="Save">
-                            </div>
-                    </div>     
-                </div>   
-
-            </div>
- 
-                <div class="panel panel-primary">
-                    <div class="panel-heading">
-                        <h3 class="panel-title"><i class="fa fa-plus-circle"></i> Create scene </h3>
+                        <h3 class="panel-title"><i class="fa fa-plus-circle"></i> Edit scene </h3>
                     </div>
 
                     <div class="panel-body">
@@ -184,101 +142,5 @@
                     </div>     
                 </div>                         
         </div>   
-
-                <div class="panel panel-primary table-responsive">
-                    <div class="panel-heading">
-                        <h3 class="panel-title"><i class="fa fa-list-alt"></i> List of scenes for this map</h3>
-                    </div>
-                    
-                        <table class="table table-striped">
-                            <thead>
-                                <tr>
-                                    <th>Scene name</th>
-                                    <th>Creation date</th>
-                                    <th>Simulation parameters</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>Actur</td>
-                                    <td>01/10/2015</td>
-                                    <td>parameters 1</td>
-                                    <td>
-                                        <button class="btn btn-primary fa fa-pencil-square-o" 
-                                                onclick="window.location.href='#/map/editScene'"></button>
-                                        
-                                        <button class="btn btn-danger fa fa-trash-o" 
-                                                data-toggle="modal" data-target="#deleteMapModal"></button>
-                                    </td> 
-                                </tr>
-
-                                <tr>
-                                    <td>Casco historico</td>
-                                    <td>02/10/2015</td>
-                                    <td>parameters 2</td>
-                                    <td>
-                                       <button class="btn btn-primary fa fa-pencil-square-o" 
-                                               onclick="window.location.href='#/map/editScene'"></button>
-                                        <button class="btn btn-danger fa fa-trash-o" 
-                                                data-toggle="modal" data-target="#deleteMapModal"></button>
-                                    </td> 
-                                </tr>
-                                
-                                <tr>
-                                    <td>Casablanca</td>
-                                    <td>04/10/2015</td>
-                                    <td>parameters 1</td>
-                                    <td>
-                                       <button class="btn btn-primary fa fa-pencil-square-o" 
-                                               onclick="window.location.href='#/map/editScene'"></button>
-                                        <button class="btn btn-danger fa fa-trash-o" 
-                                                data-toggle="modal" data-target="#deleteMapModal"></button>
-                                    </td> 
-                                </tr>
-
-                            </tbody>
-                        </table>
-                    
-                        
-                    <nav align="center">
-                        <ul class="pagination">
-                            <li class="disabled"><a href="#" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>
-                            <li class="active"><a href="#">1</a></li>
-                            <li><a href="#">2</a></li>
-                            <li><a href="#">3</a></li>
-                            <li><a href="#">4</a></li>
-                            <li><a href="#">5</a></li>
-                            <li>
-                              <a href="#" aria-label="Next">
-                                <span aria-hidden="true">&raquo;</span>
-                              </a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
     </div>
 </div>
-
-        <!-- Delete modal Modal -->
-        <div class="modal fade" role="dialog" id="deleteMapModal">
-          <div class="modal-dialog">
-
-            <!-- Modal content-->
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Confirmation</h4>
-              </div>
-                
-              <div class="modal-body">
-                <p>Are you sure you want to delete this map?</p>
-              </div>
-                
-              <div class="modal-footer">  
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Delete</button>  
-              </div>
-            </div>
-
-          </div>
-        </div>
