--- a/public/views/parameters/index.html
+++ b/public/views/parameters/index.html
@@ -41,8 +41,6 @@
                                 <th>Maximum number of users supported</th>
                                 <th>Vision radius (in meters)</th>
                                 <th>Speed of moving items (km/h)</th>
-                                <th>Maximum speed of users (km/h)</th>
-                                <th></th>
                             </tr>
                         
                         </thead>
@@ -54,9 +52,24 @@
                                 <td>1500</td>
                                 <td>250 m</td>
                                 <td>50 km/hs</td>
-                                <td>10 km/h</td>
                                 <td>
-                                    <button class="btn btn-primary" type="button">Edit</button>
+                                        <ul class="nav nav-tabs">  
+                                            <div class="btn-group">
+                                                <button type="button" class="btn btn-primary dropdown-toggle" 
+                                                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                        Actions <span class="caret"></span>
+                                                </button>
+
+                                                <ul class="dropdown-menu">
+                                                    <li><a href="#parameters" role="button" 
+                                                           data-toggle="modal" data-target="#editParameterModal">Edit parameters</a></li>
+
+                                                    <li><a href="#parameters" role="button" 
+                                                           data-toggle="modal" data-target="#deleteParameterModal">Delete parameters</a>
+                                                    </li>
+                                                </ul>
+                                            </div>
+                                        </ul>                                    
                                 </td> 
                             </tr>
 
@@ -82,8 +95,8 @@
             </div>    
         </div>
 
-        <!-- Start simulation confirmation Modal -->
-        <div class="modal fade" role="dialog" id="startSimulationModal">
+        <!-- Delete parameter Modal -->
+        <div class="modal fade" role="dialog" id="deleteParameterModal">
           <div class="modal-dialog">
 
             <!-- Modal content-->
@@ -94,16 +107,71 @@
               </div>
                 
               <div class="modal-body">
-                  <p>Are you sure you want to start the simulation?</p>
+                <p>Are you sure you want to delete this parameters?</p>
               </div>
                 
               <div class="modal-footer">  
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-success" data-dismiss="modal">Start</button>  
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Delete</button>  
               </div>
             </div>
 
           </div>
         </div>
+ 
+        <!-- Edit parameter Modal -->
+        <div class="modal fade" role="dialog" id="editParameterModal">
+          <div class="modal-dialog" id="editParameterModal">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Edit parameters</h4>
+              </div>
+                
+              <div class="modal-body">
+                        <div class="row">      
+                            <div class="col-sm-6">
+                                <label>Parameter name</label>
+                                <input class="form-control" />
+                            </div>
+                            
+                            <div class="col-sm-6">
+                                <label>Recommended maximum number of items</label>
+                                <input class="form-control" type="text">
+                            </div>
+                            
+                            <div class="col-sm-6">
+                                <br>
+                                <label>Maximum number of users supported</label>
+                                <input class="form-control" type="text">
+                            </div>
+                            
+                            <div class="col-sm-6">
+                                <br>
+                                <label>Vision radius (in meters)</label>
+                                <input class="form-control" type="text">
+                            </div>
+                            
+                            <div class="col-sm-6">
+                                <br>
+                                <label>Speed of moving items (km/h)</label>
+                                <input class="form-control" type="text">
+                            </div>
+
+                            
+                        </div>
+              </div>
+                
+              <div class="modal-footer">  
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal">Save</button>  
+              </div>
+            </div>
+
+          </div>
+        </div>        
+        
     </div>
 </div>
