--- a/public/views/simulator/index.html
+++ b/public/views/simulator/index.html
@@ -51,9 +51,7 @@
                                     .tooltip({title: 'Hello, world!', trigger: 'click'})
                                 }));    
                             });        
-
                             /*var exportPNGElement = document.getElementById('export-png');
-
                             if ('download' in exportPNGElement) {
                                 exportPNGElement.addEventListener('click', function(e) {
                                     map.once('postcompose', function(event) {
@@ -81,12 +79,25 @@
                         
                         <button type="button" class="btn btn-default fa fa-download">                         
                         </button>
+                            
+                        <button type="button" class="btn btn-default fa fa-arrow-up">                         
+                        </button>
 
+                        <button type="button" class="btn btn-default fa fa-arrow-down" hidden="hidden">                         
+                        </button>
+                        
+                        <button type="button" class="btn btn-default fa fa-arrow-left" >                         
+                        </button>
+                 
+                        <button type="button" class="btn btn-default fa fa-arrow-right">                         
+                        </button>
+                        
+                        
+                        
                         
                          <!-- <a id="export-png" class="btn" download="map.png"><i class="icon-download"></i> Export PNG</a> 
                         <br/>
                         <img id="captura" style="height: 50%;width: 50%;">
-
                           <!-- Table -->
                           
                         <table class="table">
@@ -313,7 +324,13 @@
                                 </tr>
         
                             </tbody>
-                        </table>                        
+                        </table>    
+                       
+                      
+                        
+
+                                                
+
                     </div>
                 </div>							
             </div>            
