--- a/public/views/parameters/index.html
+++ b/public/views/parameters/index.html
@@ -15,7 +15,7 @@
                 <ul class="nav navbar-nav side-nav">
                     <li><a href="#/map"><i class="fa fa-plus-circle"></i> Maps</a></li>
                     <li><a href="#/simulator"><i class="fa fa-globe"></i> Simulation</a></li>
-                    <li class="active"><a href="#/parameters"><i class="fa fa-globe"></i> Simulation parameters</a></li>
+                    <li class="active"><a href="#/parameters"><i class="fa fa-cog"></i> Simulation parameters</a></li>
                     <li><a href="#/profile"><i class="fa fa-edit"></i> Profile</a></li>
                 </ul>
             </div>
