--- a/public/views/simulator/index.html
+++ b/public/views/simulator/index.html
@@ -15,7 +15,7 @@
                     <ul class="nav navbar-nav side-nav">
                         <li><a href="#/map"><i class="fa fa-plus-circle"></i> Maps</a></li>
                         <li class="active"><a href="#/simulator"><i class="fa fa-globe"></i> Simulation</a></li>
-                        <li><a href="#/parameters"><i class="fa fa-globe"></i> Simulation parameters</a></li>
+                        <li><a href="#/parameters"><i class="fa fa-cog"></i> Simulation parameters</a></li>
                         <li><a href="#/profile"><i class="fa fa-edit"></i> Profile</a></li>
                     </ul>
                 </div>		
@@ -326,11 +326,14 @@
                             </tbody>
                         </table>    
                        
-                      
-                        
-
-                                                
-
+                        <div class="row">
+                            <div class="">
+                                <div class="col-xs-6">
+                                    <label>User speed (km/h)</label>
+                                    <input class="form-control" value="5"/>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>							
             </div>            
