--- a/public/views/maps/editScene.html
+++ b/public/views/maps/editScene.html
@@ -13,9 +13,9 @@
 
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
-                    <li class="active"><a href="#/map"><i class="fa fa-plus-circle"></i> Maps</a></li>
+                    <li class="active"><a href="#/map"><i class="fa fa-map-marker"></i> Maps</a></li>
                     <li><a href="#/simulator"><i class="fa fa-globe"></i> Simulation</a></li>
-                    <li><a href="#/parameters"><i class="fa fa-cog"></i> Simulation parameters</a></li>
+                    <li><a href="#/parameters"><i class="fa fa-cog"></i> Settings</a></li>
                     <li><a href="#/profile"><i class="fa fa-edit"></i> Profile</a></li>
                 </ul>
             </div>
