--- a/public/views/maps/editMap.html
+++ b/public/views/maps/editMap.html
@@ -73,11 +73,31 @@
                             </div>
                                     
                             <div class="col-xs-6">
-                                <label>Simulation parameters</label>
-                                <select ng-model="map.state" class="form-control">
-                                    <option value="1">simulation parameter 1</option>
-                                    <option value="2">simulation parameter 2</option>
-                                    <option value="3">simulation parameter 3</option>
+                                <label>Display settings</label>
+                                <select class="form-control">
+                                    <option value="1">Display 1</option>
+                                    <option value="2">Display  2</option>
+                                    <option value="3">Display  3</option>
+                                </select>
+                            </div>
+                                                        
+                            <div class="col-xs-6">
+                                </br>
+                                <label>Simulation settings</label>
+                                <select class="form-control">
+                                    <option value="1">Simulation 1</option>
+                                    <option value="2">Simulation 2</option>
+                                    <option value="3">Simulation 3</option>
+                                </select>
+                            </div>
+                            
+                            <div class="col-xs-6">
+                                </br>
+                                <label>Recommender settings</label>
+                                <select class="form-control">
+                                    <option value="1">Recommender 1</option>
+                                    <option value="2">Recommender 2</option>
+                                    <option value="3">Recommender 3</option>
                                 </select>
                             </div>
                             
@@ -91,7 +111,7 @@
                                     </i>
                                 </b>    
                             </div>  
-                                      
+            
                             <div class="col-xs-12">           
                                 </br>      
                                 <label>Dynamic items</label>
