--- a/public/views/parameters/simulationSettings.html
+++ b/public/views/parameters/simulationSettings.html
@@ -35,20 +35,15 @@
                     </div>
 
                     <div class="panel-body">      
-                        <div class="row">      
-                            <div class="col-sm-4">
-                                <label>Parameter 1</label>
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <label>Parameter name</label>
                                 <input class="form-control" />
                             </div>
                             
-                            <div class="col-sm-4">
-                                <label>Parameter 2</label>
-                                <input class="form-control" type="text">
-                            </div>
-                            
-                            <div class="col-sm-4">
-                                <label>Parameter 3</label>
-                                <input class="form-control" type="text">
+                            <div class="col-sm-6">
+                                <label>Dynamic item speed (km/h)</label>
+                                <input class="form-control" />
                             </div>
                             
                             <div class="col-sm-12">
@@ -68,9 +63,8 @@
                     <table class="table table-striped">
                         <thead>
                             <tr>  
-                                <th>Parameter 1</th>
-                                <th>Parameter 2</th>
-                                <th>Parameter 3</th>
+                                <th>Parameter name</th>    
+                                <th>Dynamic item speed (km/h)</th>
                                 <th>Actions</th>
                             </tr>
                         
@@ -79,8 +73,7 @@
                         <tbody>
                             <tr>
                                 <td>Parametros generales</td>
-                                <td>10</td>
-                                <td>1500</td>
+                                <td>50 km/h</td>
                                 <td>
                                         <ul class="nav nav-tabs">  
                                             <div class="btn-group">
@@ -156,27 +149,20 @@
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Edit parameters</h4>
+                <h4 class="modal-title">Edit simulation setting</h4>
               </div>
                 
               <div class="modal-body">
                         <div class="row">      
-                            <div class="col-sm-4">
-                                <label>Parameter 1</label>
+                            <div class="col-sm-6">
+                                <label>Parameter name</label>
                                 <input class="form-control" />
                             </div>
                             
-                            <div class="col-sm-4">
-                                <label>Parameter 2</label>
+                            <div class="col-sm-6">
+                                <label>Maximum number of dynamic item to show</label>
                                 <input class="form-control" type="text">
                             </div>
-                            
-                            <div class="col-sm-4">
-                                <label>Parameter 3</label>
-                                <input class="form-control" type="text">
-                            </div>
-
-                            
                         </div>
               </div>
                 
