--- a/public/views/maps/newMap.html
+++ b/public/views/maps/newMap.html
@@ -76,13 +76,33 @@
                                 <label>Scene name</label>
                                 <input class="form-control" ng-model="map.name" />
                             </div>
-                                    
+                            
                             <div class="col-xs-6">
-                                <label>Simulation parameters</label>
-                                <select ng-model="map.state" class="form-control">
-                                    <option value="1">simulation parameter 1</option>
-                                    <option value="2">simulation parameter 2</option>
-                                    <option value="3">simulation parameter 3</option>
+                                <label>Display settings</label>
+                                <select class="form-control">
+                                    <option value="1">Display 1</option>
+                                    <option value="2">Display  2</option>
+                                    <option value="3">Display  3</option>
+                                </select>
+                            </div>
+                                                        
+                            <div class="col-xs-6">
+                                </br>
+                                <label>Simulation settings</label>
+                                <select class="form-control">
+                                    <option value="1">Simulation 1</option>
+                                    <option value="2">Simulation 2</option>
+                                    <option value="3">Simulation 3</option>
+                                </select>
+                            </div>
+                            
+                            <div class="col-xs-6">
+                                </br>
+                                <label>Recommender settings</label>
+                                <select class="form-control">
+                                    <option value="1">Recommender 1</option>
+                                    <option value="2">Recommender 2</option>
+                                    <option value="3">Recommender 3</option>
                                 </select>
                             </div>
                             
@@ -96,7 +116,7 @@
                                     </i>
                                 </b>    
                             </div>  
-                                      
+            
                             <div class="col-xs-12">           
                                 </br>      
                                 <label>Dynamic items</label>
@@ -107,7 +127,7 @@
                                     </i>
                                 </b>   
                             </div>  
-                    
+                            
                             <div class="col-xs-12">
                                 <br/>
                                 <h3>Limitations of the scene</h3>
