--- a/public/views/parameters/index.html
+++ b/public/views/parameters/index.html
@@ -36,21 +36,16 @@
 
                     <div class="panel-body">      
                         <div class="row">      
-                            <div class="col-sm-4">
-                                <label>Parameter 1</label>
+                            <div class="col-sm-6">
+                                <label>Parameter name</label>
                                 <input class="form-control" />
                             </div>
                             
-                            <div class="col-sm-4">
-                                <label>Parameter 2</label>
+                            <div class="col-sm-6">
+                                <label>Maximum number of dynamic item to show</label>
                                 <input class="form-control" type="text">
                             </div>
-                            
-                            <div class="col-sm-4">
-                                <label>Parameter 3</label>
-                                <input class="form-control" type="text">
-                            </div>
-                            
+                        
                             <div class="col-sm-12">
                                 <br>
                                 <input type="submit" class="btn btn-primary" value="Save">
@@ -70,7 +65,6 @@
                             <tr>  
                                 <th>Parameter 1</th>
                                 <th>Parameter 2</th>
-                                <th>Parameter 3</th>
                                 <th>Actions</th>
                             </tr>
                         
@@ -156,27 +150,20 @@
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Edit parameters</h4>
+                <h4 class="modal-title">Edit display setting</h4>
               </div>
                 
               <div class="modal-body">
                         <div class="row">      
-                            <div class="col-sm-4">
-                                <label>Parameter 1</label>
+                            <div class="col-sm-6">
+                                <label>Parameter name</label>
                                 <input class="form-control" />
                             </div>
                             
-                            <div class="col-sm-4">
-                                <label>Parameter 2</label>
+                            <div class="col-sm-6">
+                                <label>Maximum number of dynamic item to show</label>
                                 <input class="form-control" type="text">
                             </div>
-                            
-                            <div class="col-sm-4">
-                                <label>Parameter 3</label>
-                                <input class="form-control" type="text">
-                            </div>
-
-                            
                         </div>
               </div>
                 
