--- a/public/views/parameters/recommenderSettings.html
+++ b/public/views/parameters/recommenderSettings.html
@@ -37,17 +37,17 @@
                     <div class="panel-body">      
                         <div class="row">      
                             <div class="col-sm-4">
-                                <label>Parameter 1</label>
+                                <label>Parameter name</label>
                                 <input class="form-control" />
                             </div>
                             
                             <div class="col-sm-4">
-                                <label>Parameter 2</label>
-                                <input class="form-control" type="text">
+                                <label>Maximum distance to go (meters)</label>
+                                <input class="form-control" />
                             </div>
                             
                             <div class="col-sm-4">
-                                <label>Parameter 3</label>
+                                <label>Visibility radius (meters)</label>
                                 <input class="form-control" type="text">
                             </div>
                             
@@ -68,9 +68,9 @@
                     <table class="table table-striped">
                         <thead>
                             <tr>  
-                                <th>Parameter 1</th>
-                                <th>Parameter 2</th>
-                                <th>Parameter 3</th>
+                                <th>Parameter name</th>
+                                <th>Maximum distance to go (meters)</th>
+                                <th>Visibility radius (meters)</th>
                                 <th>Actions</th>
                             </tr>
                         
@@ -78,9 +78,9 @@
                             
                         <tbody>
                             <tr>
-                                <td>Parametros generales</td>
-                                <td>10</td>
-                                <td>1500</td>
+                                <td>Actur parameter</td>
+                                <td>1500 m</td>
+                                <td>150 m</td>
                                 <td>
                                         <ul class="nav nav-tabs">  
                                             <div class="btn-group">
@@ -156,23 +156,23 @@
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Edit parameters</h4>
+                <h4 class="modal-title">Edit recommender setting</h4>
               </div>
                 
               <div class="modal-body">
                         <div class="row">      
                             <div class="col-sm-4">
-                                <label>Parameter 1</label>
+                                <label>Parameter name</label>
                                 <input class="form-control" />
                             </div>
                             
                             <div class="col-sm-4">
-                                <label>Parameter 2</label>
-                                <input class="form-control" type="text">
+                                <label>Maximum distance to go (meters)</label>
+                                <input class="form-control" />
                             </div>
                             
                             <div class="col-sm-4">
-                                <label>Parameter 3</label>
+                                <label>Visibility radius (meters)</label>
                                 <input class="form-control" type="text">
                             </div>
                         </div>
