--- a/public/views/parameters/index.html
+++ b/public/views/parameters/index.html
@@ -63,8 +63,8 @@
                     <table class="table table-striped">
                         <thead>
                             <tr>  
-                                <th>Parameter 1</th>
-                                <th>Parameter 2</th>
+                                <th>Parameter name</th>
+                                <th>Maximum number of dynamic item to show</th>
                                 <th>Actions</th>
                             </tr>
                         
@@ -73,8 +73,7 @@
                         <tbody>
                             <tr>
                                 <td>Parametros generales</td>
-                                <td>10</td>
-                                <td>1500</td>
+                                <td>50</td>
                                 <td>
                                         <ul class="nav nav-tabs">  
                                             <div class="btn-group">
