--- a/public/views/parameters/index.html
+++ b/public/views/parameters/index.html
@@ -37,12 +37,12 @@
                     <div class="panel-body">      
                         <div class="row">      
                             <div class="col-sm-6">
-                                <label>Parameter name</label>
+                                <label>Pool name</label>
                                 <input class="form-control" />
                             </div>
                             
                             <div class="col-sm-6">
-                                <label>Maximum number of dynamic item to show</label>
+                                <label>Maximum number of dynamic items to show</label>
                                 <input class="form-control" type="text">
                             </div>
                         
@@ -63,9 +63,9 @@
                     <table class="table table-striped">
                         <thead>
                             <tr>  
-                                <th>Parameter name</th>
-                                <th>Maximum number of dynamic item to show</th>
-                                <th>Actions</th>
+                                <th>Pool name</th>
+                                <th>Maximum number of dynamic items to show</th>
+                                <th></th>
                             </tr>
                         
                         </thead>
@@ -79,7 +79,7 @@
                                             <div class="btn-group">
                                                 <button type="button" class="btn btn-primary dropdown-toggle" 
                                                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                                        Actions <span class="caret"></span>
+                                                        Options <span class="caret"></span>
                                                 </button>
 
                                                 <ul class="dropdown-menu">
@@ -155,12 +155,12 @@
               <div class="modal-body">
                         <div class="row">      
                             <div class="col-sm-6">
-                                <label>Parameter name</label>
+                                <label>Pool name</label>
                                 <input class="form-control" />
                             </div>
                             
                             <div class="col-sm-6">
-                                <label>Maximum number of dynamic item to show</label>
+                                <label>Maximum number of dynamic items to show</label>
                                 <input class="form-control" type="text">
                             </div>
                         </div>
