--- a/public/views/parameters/simulationSettings.html
+++ b/public/views/parameters/simulationSettings.html
@@ -65,7 +65,7 @@
                             <tr>  
                                 <th>Parameter name</th>    
                                 <th>Dynamic item speed (km/h)</th>
-                                <th>Actions</th>
+                                <th></th>
                             </tr>
                         
                         </thead>
@@ -79,7 +79,7 @@
                                             <div class="btn-group">
                                                 <button type="button" class="btn btn-primary dropdown-toggle" 
                                                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                                        Actions <span class="caret"></span>
+                                                        Options <span class="caret"></span>
                                                 </button>
 
                                                 <ul class="dropdown-menu">
